# car-pai

./: .gitignore
server/: .~chengdong.xlsx  aoti.xlsx  car.xlsx  chengdong.xlsx  config.yaml  gaotie.xlsx  go.mod  go.sum  main.go  zhencun.xlsx  zhong.xlsx  zongzhanqian.xlsx  zongzhanrukou.xlsx
server/api/: enter.go
server/api/base/: logReg.go
server/api/manage/: area.go  car.go  car_log.go  device.go  enter.go
server/config/: config.go  ftp.go
server/core/: server.go
server/global/: global.go
server/hiktest/cgo/: go.h
server/initialize/: dao.go  dh.go  gorm.go  hik.go  router.go  task.go  watch.go
server/middleware/: casbin.go  cors.go
server/model/base/request/: logReg.go
server/model/manage/: area.go  car.go  car_log.go  device.go
server/model/manage/request/: area.go  car.go  car_log.go  device.go
server/model/manage/response/: car.go
server/pkg/dahua/: client.go  client_req.go  gateway.go  types.go
server/pkg/dh/: client.go  gateway.go  server.go  types.go
server/pkg/hk_gateway/: client.go  client_req.go  digest.go  gateway.go  hik_types.go  model.go  service.go  types.go
server/pkg/hk_gateway/cgo/: go.h
server/pkg/hk_gateway/guard/: api-device.go  api-gateway.go  api-guard.go  api-led.go  client.go  digest.go  parse.go
server/router/: enter.go
server/router/manage/: area.go  car.go  car_log.go  device.go  enter.go
server/service/: enter.go
server/service/manage/: area.go  car.go  car_log.go  device.go  enter.go
server/tests/: cgo.go  dahua.go  dir.go  excel.go  hello.c++  hello.h  hik.go  test  test.go  中关村.xls  城东.xls  奥体.xls  总站前.xls  总站前.xlsx  总站前广场2025.01.16.xls  镇村.xls  高铁25.03.17.xls
server/third/: CMakeLists.txt  main.cpp
server/third/hik/linux64/lib/: sdkTest
server/third/hik/src/: Alarm.cpp  CapPicture.cpp  ConfigParams.cpp  GetStream.cpp  Voice.cpp  consoleMain.cpp  playback.cpp
server/third/src/: dahua.h  device.cpp  device.h  gateway.h  hik.cpp  hik.h  router.h  server.cpp  server.h
web/: .env.production  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/api/base/: logReg.ts
web/src/config/: layouts.ts
web/src/store/modules/: user.ts
web/src/styles/: index.scss
web/src/utils/: index.ts  service.ts
(+19 files in other folders)
